--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@protoplan/unit-utils",
-  "version": "1.0.4",
+  "name": "@protoplan/types",
+  "version": "1.0.0",
   "description": "",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
@@ -36,7 +36,7 @@
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hannah-jemima/protoplan-unit-utils.git"
+    "url": "git+https://github.com/hannah-jemima/protoplan-types.git"
   },
   "license": "MIT",
   "devDependencies": {
