--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@protoplan/types",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "",
-  "main": "",
+  "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "module": "./lib/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "npm i & tsc",
     "prepublishOnly": "npm run build"
   },
   "files": [
