publsh types to lib/types/index.d.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./lib",
-    "declaration": true
+    //"declaration": true
   },
   "include": [
     "src"
