--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@protoplan/types",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "",
   "main": "./lib/index.js",
-  "types": "./lib/index.d.ts",
+  "types": "./lib/types/index.d.ts",
   "module": "./lib/index.js",
   "scripts": {
-    "build": "npm i & tsc",
-    "prepublishOnly": "npm run build"
+    "build": "npm i & tsc & tsc --declaration --outDir ./lib/types --emitDeclarationOnly",
+    "prepublishOnly": "npm run build",
+    "publish": "npm publish --access public"
   },
   "files": [
     "lib/"
