--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@protoplan/types",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "",
-  "main": "",
+  "main": "index.d.ts",
+  "types": "index.d.ts",
   "module": "",
   "scripts": {
-    "build": "npm i",
+    "build": "npm update",
     "commit": "git add . & git commit -m 'pub'",
     "prepublishOnly": "npm run build & npm run commit",
     "publish": "npm publish --access public"
