--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@protoplan/types",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "",
-  "main": "index.d.ts",
-  "types": "index.d.ts",
+  "main": "./index.d.ts",
+  "types": "./index.d.ts",
   "module": "",
   "scripts": {
     "build": "npm update",
