--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,11 @@
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./lib",
+    "declarationDir": "./dist",
     "declaration": true
   },
   "include": [
-    "src"
+    "src",
+    "index.ts"
   ]
 }
