--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@protoplan/types",
-  "version": "26.0.0",
+  "version": "27.0.0",
   "description": "",
-  "main": "./index.js",
-  "types": "./index.d.ts",
+  "types": "./dist/index.d.ts",
   "module": "",
   "scripts": {
     "build": "npm update && tsc",
