--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@protoplan/types",
-  "version": "27.0.3",
+  "version": "27.0.4",
   "description": "",
   "types": "./dist/index.d.ts",
-  "main": "./dist/index.d.ts",
+  "main": "index.ts",
   "module": "",
   "scripts": {
     "build": "npm update && tsc",
