--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@protoplan/types",
-  "version": "28.1.0",
+  "version": "28.1.1",
   "description": "",
   "types": "./dist/index.d.ts",
   "main": "index.js",
@@ -12,7 +12,11 @@
     "pub": "npm publish --access public"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.13.7",
+    "@mui/system": "^5.13.7",
+    "@mui/utils": "^5.13.7",
     "@types/node-dijkstra": "^2.5.2",
     "node-dijkstra": "^2.5.0"
   },
