--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "name": "@protoplan/types",
-  "version": "36.1.1",
+  "version": "36.1.2",
   "description": "",
-  "types": "./dist/index.d.ts",
-  "main": "index.js",
-  "module": "",
+  "main": "./lib/index.js",
+  "module": "./lib/index.js",
   "scripts": {
     "build": "npm update && tsc",
     "commit": "git add . & git commit -m publishing",
     "prepublishOnly": "npm run build & npm run commit",
     "pub": "npm publish --access public"
-  },
-  "dependencies": {
-    "@types/node-dijkstra": "^2.5.2",
-    "node-dijkstra": "^2.5.0"
   },
   "optionalDependencies": {
     "fsevents": "2.3.2"
