--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@protoplan/types",
-  "version": "36.1.2",
+  "version": "36.2.2",
   "description": "",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
@@ -9,6 +9,12 @@
     "commit": "git add . & git commit -m publishing",
     "prepublishOnly": "npm run build & npm run commit",
     "pub": "npm publish --access public"
+  },
+  "files": [
+    "lib/"
+  ],
+  "devDependencies": {
+    "typescript": "^4.7.4"
   },
   "optionalDependencies": {
     "fsevents": "2.3.2"
@@ -33,8 +39,5 @@
     "type": "git",
     "url": "git+https://github.com/hannah-jemima/protoplan-types.git"
   },
-  "license": "MIT",
-  "devDependencies": {
-    "typescript": "^4.7.4"
-  }
+  "license": "MIT"
 }
